Changed new subscription dialog to use tom-select from select2 fixed z-index, text-alignment in the dropdown menu to left in new subscription modal, replaced click_link with page.find().click in subscription specs, removed href in subscription index

--- a/app/webpacker/css/admin/components/navigation.scss
+++ b/app/webpacker/css/admin/components/navigation.scss
@@ -158,7 +158,7 @@ nav.menu {
         margin-bottom: -5px;
         left: 50%;
         margin-left: -10px;
-        z-index: 1;
+        z-index: 0;
       }
     }
   }
